# sdl2raii

./: .clang-format  CMakeLists.txt  emscripten_glue.hpp  end_sdl2raii_horrible_macros.hpp  endmacros.sh  img.hpp  license.txt  readme.org  sdl.hpp  sdl2raii_horrible_macros.hpp  sdl2raii_macros.hpp  traits.hpp
include/sdl2raii/: MayError.hpp  compat_macros.hpp  emscripten_glue.hpp  end_sdl2raii_wrapgen_macros.hpp  hedley.h  img.hpp  sdl.hpp  sdl2raii_wrapgen_macros.hpp  traits.hpp  unmacro.hpp  wrapgen_macros.hpp
